# amethyst-behavior

./: Cargo.toml
src/: arrive_system.rs  behavior.rs  evade_system.rs  flee_system.rs  lib.rs  limiter.rs  pursue_system.rs  seek_system.rs  steering_acceleration.rs  velocity.rs
